--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.0.0-alpha",
     "http-proxy-middleware": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0.1",
