--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "object-assign": "4.1.1",
     "path-to-regexp": "^6.1.0",
@@ -47,6 +48,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-localstorage": "^0.4.1",
     "redux-react-hook": "^4.0.1",
     "redux-thunk": "2.3.0",
