--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.0.0-alpha",
     "http-proxy-middleware": "^1.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
@@ -38,6 +36,7 @@
     "promise": "8.1.0",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
+    "ramda": "^0.27.0",
     "react": "^16.12.0",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
